# proj_architecture

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.ps1
.github/workflows/: ci.yml  deploy.yml
db/migrations/: 001_initial_schema.sql  002_add_listing_images.sql
db/seed/: seed.sql
docs/diagrams/: class-diagram.mmd  component-diagram.mmd  deployment-diagram.mmd  domain-model.md  er-diagram.mmd  sequence-auth-login.mmd  sequence-listing-moderation.mmd  use-case-diagram.mmd
docs/presentation/: bulletin-board-platform-presentation.pptx  final-presentation-notes.md
docs/spec/: api.md  architecture.md  database.md  deployment.md  frontend.md  requirements.md  system-documentation.md  testing.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  styles.css
src/: main.py
src/application/: read_models.py
src/controllers/: auth.py  categories.py  listings.py  messages.py  moderation.py  uploads.py  users.py
src/core/: config.py  security.py
src/db/: database.py
src/domain/: __init__.py  entities.py
src/dto/: schemas.py
src/models/: entities.py
src/repositories/: base.py  category_repository.py  listing_repository.py  message_repository.py  user_repository.py
src/services/: _legacy.py  auth_service.py  category_service.py  listing_service.py  message_service.py  moderation_service.py  user_service.py
tests/: conftest.py
tests/integration/: test_api.py  test_mongodb_bootstrap.py  test_postgres_bootstrap.py
(+56 files in other folders)
